airflow-test/service-airflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-test-svc
  namespace: airflow-test
spec:
  selector:
    app: airflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
