airflow-test/route-airflow.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airflow-test-route
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: airflow-test-svc
